# package_manifest_parsing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package_manifest_parsing.sublime-project
cmake/: FindLibXML2.cmake
include/package_manifest_parsing/: pkg.h
src/: parse.c
src/package_manifest_parsing/: pkg.c
tests/package_manifests/catkin/: package.xml
